dream job webinar notes, unrelated to this repo

--- a/assignments/.vscode/settings.json
+++ b/assignments/.vscode/settings.json
@@ -6,6 +6,7 @@
     ],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "lib/algs4.jar"
     ]
 }
